--- a/backend-fastify/.env.example
+++ b/backend-fastify/.env.example
@@ -2,6 +2,6 @@ PORT=8000
 LOGGER=true
 SALT=12
 SECRET_KEY='secret'
-DB_CONNECT=mongodb://localhost:27017/database-name
+DB_CONNECT=mongodb+srv://Madhuri005:WoBUSGEP945wywft@cluster0.cxmlb8e.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
 # OPTIONAL for GOOGLE SIGNIN
 GOOGLE_AUTH_CLIENT_ID='[something].apps.googleusercontent.com'
